<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MTGCompanionActivity!</string>
    <string name="app_name">Magic Companion</string>
    <string name="main_activity_title">Game</string>
    <string name="players_activity_title">Players</string>
    <string name="cardsearch_activity_title">Cards</string>
    <string name="settings_activity_title">Settings</string>
    <string name="default_value">0</string>
    <string name="poison_icon_description">Poison Counters</string>
    <string name="hp_icon_description">Health Level</string>
	<string name="garbage_delete">Delete</string>
	<string name="menu_search">Card Search</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_add_player">Add Player</string>
	<string name="menu_delete_player">Delete Player</string>
	<string name="menu_players">Manage Players</string>
	<string name="card_db_url">http://ldap.ilcid.net/cards.db</string>
	<string name="card_db_name">cards.db</string>
	<string name="prefs_file">prefs.xml</string>
</resources>