<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_players"
          android:icon="@android:drawable/ic_menu_manage"
          android:title="@string/menu_players"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/menu_search"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_settings"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menu_settings"
          android:showAsAction="withText" />
    <item android:id="@+id/menu_about"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/menu_about"
          android:showAsAction="withText" />
</menu>